# transformer-experiments

./: .gitignore  LICENSE  average_checkpoints.py  base_trainer.py  create_tokenizer_tsv.py  custom_dataloaders.py  custom_datasets.py  dataloader.py  debugger.py  downloader.py  eval.py  grokfast.py  model_provider.py  multigpu_training_wrappers.py  multigpu_translation_training_wrapper.py  prepare_data.py  pytorch_profiler.py  readme.md  requirements.txt  score.py  single_text_file_dataset.py  split_data.py  token_statistics.py  train.py  train_llm.py  train_llm_tokenizer.py  train_translation.py  utils.py  yaml_dict.py
configs/: admin.yaml  checkpoint_1.yaml  checkpoint_2.yaml  checkpoint_earlystop_1.yaml  default.yaml  defaults.yaml  embedding_compression_nonlinear.yaml  grokfast_ema.yaml  heads_activation.yaml  infinite_attn_linear.yaml  infinite_attn_nonlinear.yaml  latent_kv_1.yaml  latent_qk_1.yaml  latent_tqkv_1.yaml  learnable_rotary.yaml  llm.yaml  millions_moe_replace.yaml  millions_moe_sequential.yaml  moe.yaml  moe_delayed_diversify.yaml  moe_diversify.yaml  moe_diversify_1.yaml  moe_more.yaml  moe_more_1.yaml  multilang_test.yaml  phi3_mlp.yaml  swiglu_1.yaml  vae_1.yaml
criteria/: labelsmooth.py
dataloaders/: gpt2_dataset_loader.py  large_dataset_loader.py  single_file_dataloader.py  single_file_dataset_loader.py  small_dataset_loader.py  streaming_dataloader.py
llm/: model_provider.py  train.py  train_tokenizer.py
lm_causal/: causal_trainer.py  train.py
rust/: Cargo.toml
rust/src/: main.rs  rotary_embedding_torch.rs  simple_transformer.rs
(+272 files in other folders)
