[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
pyo3-tch = { git = "https://github.com/LaurentMazare/tch-rs.git", version = "0.15.0" }
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", version = "0.15.0" }
tch-ext = { git = "https://github.com/LaurentMazare/tch-rs.git", version = "0.2.0" }
torch-sys = { git = "https://github.com/LaurentMazare/tch-rs.git", version = "0.15.0" }
